--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 category: about
-title: Yong Yuan's homepage
-description: I am Yong Yuan, a Computer Vision Algorithm Engineer in Kwai. My research interests cover large-scale image retrieval, approximate nearest neighbor search, content-based video copy detection.
+title: lucy zhou's homepage
+description: I am lucy zhou.
 ---
 
 <section class="about-me inner">
@@ -18,20 +18,20 @@ description: I am Yong Yuan, a Computer Vision Algorithm Engineer in Kwai. My re
 
   <blockquote>
   <p>
-    We always overestimate the change that will occur in the next two years and underestimate the change that will occur in the next ten. Don’t let yourself be lulled into inaction.
+    TBC
   </p>
   </blockquote>
 
   <p>
-    I am <a href="/"><span itemprop="name">Yong Yuan</span></a>, an Computer Vision Algorithm Engineer in <a href="https://www.kwai.com/">Kwai </a> (MeiTuan->KuaiShou). I completed Master's degree in <a href="http://english.ucas.ac.cn/Pages/default.aspx"><strong>University of Chinese Academy of Sciences</strong></a> on June 22, 2016 and earned Bachelor's degree in Faculty of Science at <a href="http://www.xidian.edu.cn/">Xidian University</a> of science and technology of the electronics information on July 1，2013.
+    I am <a href="/"><span itemprop="name">lucy zhou</span></a>, TBC <a href="https://www.kwai.com/">TBC </a> TBC <a href="http://english.ucas.ac.cn/Pages/default.aspx"><strong>TBC</strong></a> TBC <a href="http://www.xidian.edu.cn/">TBC</a> TBC
   </p>
 
   <p>
-    My research interests cover <strong>Content-based Image Retrieval</strong> (more than six years experience), <strong>Approximate Nearest Neighbor Search</strong>, <strong>Content-based Video Copy Detection</strong> and <strong>Video Classification</strong>.
+    TBC <strong>TBC</strong> TBC, <strong>TBC</strong>, <strong>TBC</strong> and <strong>TBC</strong>.
   </p>
 
   <p>
-    I support open source (@<a href="https://github.com/willard-yuan">willard-yuan<i class="icon-github"></i></a>), love coding. In my free time, I dive into writing, losing in thinking, reading <a href="https://github.com/willard-yuan">books</a> to enrich themselves.
+    TBC (@<a href="https://github.com/qumingzhentmnan">TBC<i class="icon-github"></i></a>), TBC <a href="https://github.com/qumingzhentmnan">TBC</a> TBC
   </p>
 
 </section>
@@ -50,7 +50,7 @@ description: I am Yong Yuan, a Computer Vision Algorithm Engineer in Kwai. My re
     </ul>
   </blockquote>
   <p>
-    If you are interested in me, you can access to my English <a href="{{ site.url }}/YongYuan_resume.pdf"><strong>resume</strong></a> for more details.
+    TBC <a href="{{ site.url }}/resume.pdf"><strong>resume</strong></a> for more details.
   </p>
 </section>
 
