--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ description: I am lucy zhou.
   </blockquote>
 
   <p>
-    I am <a href="/"><span itemprop="name">lucy zhou</span></a>, TBC <a href="https://www.kwai.com/">TBC </a> TBC <a href="http://english.ucas.ac.cn/Pages/default.aspx"><strong>TBC</strong></a> TBC <a href="http://www.xidian.edu.cn/">TBC</a> TBC
+    I am <a href="/"><span itemprop="name">lucy zhou</span></a>, TBC <a href="https://">TBC </a> TBC <a href="http://"><strong>TBC</strong></a> TBC <a href="http://www.">TBC</a> TBC
   </p>
 
   <p>
