--- a/cn/index.html
+++ b/cn/index.html
@@ -30,7 +30,7 @@ description: 个人主页
     研究兴趣集中于<strong>待补充</strong>待补充、<strong>待补充</strong>、<strong>待补充</strong>方向和<strong>待补充</strong>。
   </p>
   <p>
-    待补充(<a href="https://github.com/qumingzhentmnan">待补充<i class="icon-github"></i></a>)，待补充<a href="https://qumingzhentmnan.github.io//blog/">文字</a>待补充。
+    待补充(<a href="https://github.com/qumingzhentmnan">待补充<i class="icon-github"></i></a>)，待补充<a href="https://qumingzhentmnan.github.io/blog/">文字</a>待补充。
   </p>
 </section>
 
@@ -48,7 +48,7 @@ description: 个人主页
 </ul>
 </blockquote>
   <p>
-    更多请查看我的<a href="{{ site.url }}/YongYuan_resume.pdf"><strong>简历</strong></a>。
+    更多请查看我的<a href="{{ site.url }}/resume.pdf"><strong>简历</strong></a>。
   </p>
 </section>
 
