--- a/resume/index.html
+++ b/resume/index.html
@@ -1,7 +1,7 @@
 ---
 layout: simplePage
-title: Yong Yuan - Resume
-description: Yong Yuan's resume.
+title: lucy zhou - Resume
+description: lucy zhou's resume.
 category: resume
 ---
 
