--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ description: I am lucy zhou.
     </ul>
   </blockquote>
   <p>
-    TBC <a href="{{ site.url }}/resume.pdf"><strong>resume</strong></a> for more details.
+    TBC <a href="{{ site.url }}//resume.pdf"><strong>resume</strong></a> for more details.
   </p>
 </section>
 
